# kaggle_pressure

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run_exp.sh
notebook/from_kaggle_kernel/: pressure-lstm-baseline4.ipynb
src/: exp001_base.py
src/000_exp_test/: train.py
src/002_base/: train.py
src/004_n_hidden128/: train.py
src/005_minmax_scaler/: train.py
src/006_lstm_dropout/: train.py
src/007_emb_size2/: train.py
src/008_lstm_layer3/: train.py
src/009_u_out0_loss/: train.py
src/010_decay_loss/: train.py
src/011_lr_1e3/: train.py
src/012_lr_1e3_004/: train.py
src/013_maxepoch200/: train.py
src/014_hidden512/: train.py
src/015_add_cluster_emb/: train.py
src/016_hidden1024/: train.py
src/017_add_global2seq/: train.py
src/018_drop_area_feature/: train.py
src/019_u_in_step_cumsum/: train.py
src/020_add_global_feature_after_lstm/: train.py
src/021_u_in_diff-1/: train.py
src/022_uin_cumsum_per_time/: train.py
src/023_area_per_time_base020/: train.py
src/024_prev_diff_base017/: train.py
src/025_merge021_024/: train.py
src/026_lstm512_4_lstm256_2/: train.py
src/027_lstm512_2/: train.py
src/028_lstm512_2_lstm256_2/: train.py
src/029_lstm256_2_lstm512_2/: train.py
src/030_del_cross/: train.py
src/031_del_cross2/: train.py
src/032_add_decoder_dense_layer/: train.py
src/033_u_in_diff_diff2/: train.py
src/034_5fold_of_030/: train.py
src/035_robust_scaler_030/: train.py
src/036_nakama_dropout/: train.py
src/037_nakama_dropout2/: train.py
src/039_shift_uin/: train.py
(+85 files in other folders)
