[tool.poetry]
name = "pressure"
version = "0.0.1"
description = ""
authors = ["pao"]
packages = []

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
sklearn = "*"
torch = "*"
tqdm = "*"
lightgbm = "*"
mlflow = "*"
wandb = "*"
transformers = "*"
jupyterlab = "^3.1.14"


[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = {version = "^21.9b0", allow-prereleases = true}
[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 120
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]